# process-files-service

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  guidelines.md  journal.md  process_file.sh  pyproject.toml  todo.md
src/: main.py  worker.py
src/api/: routes.py
src/models/: documents.py
src/services/: s3_service.py
src/utils/: logging.py
